--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -36,14 +36,14 @@ DOMAIN, apps.mzstatic.com ,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-07-24 20:23:23
+// updated on 2017-08-02 00:48:11
 
 
 
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-07-24 20:23:20
+// updated on 2017-08-02 00:48:04
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -935,6 +935,7 @@ DOMAIN-SUFFIX,beric.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,berlintwitterwall.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,berm.co.nz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bestforchina.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bestgore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bestvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bestvpnserver.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bestvpnservice.com,Proxy,force-remote-dns
@@ -3079,6 +3080,7 @@ DOMAIN-SUFFIX,nukistream.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nurgo-software.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nutaku.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuvid.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nvdst.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nuzcom.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nvquan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nvtongzhisheng.org,Proxy,force-remote-dns
