--- a/configFileHere/whitelist.conf
+++ b/configFileHere/whitelist.conf
@@ -27,7 +27,7 @@ IP-CIDR, 17.0.0.0/8, DIRECT, no-resolve
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-07-24 20:23:23
+// updated on 2017-08-02 00:48:11
 
 
 
@@ -35,7 +35,7 @@ IP-CIDR, 17.0.0.0/8, DIRECT, no-resolve
 DOMAIN-SUFFIX,cn,ChinaProxy
 
 // white list from dnsmasq_china_list!
-// updated on 2017-07-24 20:24:22
+// updated on 2017-08-02 00:48:34
 DOMAIN-SUFFIX,6.com,ChinaProxy
 DOMAIN-SUFFIX,gold.net,ChinaProxy
 DOMAIN-SUFFIX,00.net,ChinaProxy
@@ -2974,6 +2974,7 @@ DOMAIN-SUFFIX,500efuma.com,ChinaProxy
 DOMAIN-SUFFIX,500kan.com,ChinaProxy
 DOMAIN-SUFFIX,500wan.com,ChinaProxy
 DOMAIN-SUFFIX,500wancache.com,ChinaProxy
+DOMAIN-SUFFIX,500zhongcai.com,ChinaProxy
 DOMAIN-SUFFIX,5011.net,ChinaProxy
 DOMAIN-SUFFIX,501811.com,ChinaProxy
 DOMAIN-SUFFIX,501wan.com,ChinaProxy
@@ -10694,6 +10695,7 @@ DOMAIN-SUFFIX,cloudsbit.com,ChinaProxy
 DOMAIN-SUFFIX,cloudsoar.com,ChinaProxy
 DOMAIN-SUFFIX,cloudsohu.net,ChinaProxy
 DOMAIN-SUFFIX,cloudtcp.net,ChinaProxy
+DOMAIN-SUFFIX,cloudtomicro.com,ChinaProxy
 DOMAIN-SUFFIX,cloudwise.com,ChinaProxy
 DOMAIN-SUFFIX,cloudxns.com,ChinaProxy
 DOMAIN-SUFFIX,cloudxns.net,ChinaProxy
@@ -11816,6 +11818,7 @@ DOMAIN-SUFFIX,cuncun8.com,ChinaProxy
 DOMAIN-SUFFIX,cuncunle.com,ChinaProxy
 DOMAIN-SUFFIX,cunnar.com,ChinaProxy
 DOMAIN-SUFFIX,cunqianguan.me,ChinaProxy
+DOMAIN-SUFFIX,cuntuba520.com,ChinaProxy
 DOMAIN-SUFFIX,cupdata.com,ChinaProxy
 DOMAIN-SUFFIX,cupdns.com,ChinaProxy
 DOMAIN-SUFFIX,cuphr.com,ChinaProxy
@@ -14812,6 +14815,7 @@ DOMAIN-SUFFIX,feitianwu7.com,ChinaProxy
 DOMAIN-SUFFIX,feitwo.com,ChinaProxy
 DOMAIN-SUFFIX,feiwan.net,ChinaProxy
 DOMAIN-SUFFIX,feixiong.tv,ChinaProxy
+DOMAIN-SUFFIX,feixiubook.com,ChinaProxy
 DOMAIN-SUFFIX,feixue.com,ChinaProxy
 DOMAIN-SUFFIX,feixuege.com,ChinaProxy
 DOMAIN-SUFFIX,feiyang.me,ChinaProxy
@@ -15085,6 +15089,7 @@ DOMAIN-SUFFIX,fltrp.com,ChinaProxy
 DOMAIN-SUFFIX,flvcd.com,ChinaProxy
 DOMAIN-SUFFIX,flvxz.com,ChinaProxy
 DOMAIN-SUFFIX,flxdns.com,ChinaProxy
+DOMAIN-SUFFIX,os.xyz,ChinaProxy
 DOMAIN-SUFFIX,fly086.com,ChinaProxy
 DOMAIN-SUFFIX,fly1999.com,ChinaProxy
 DOMAIN-SUFFIX,fly5u.com,ChinaProxy
@@ -15361,6 +15366,7 @@ DOMAIN-SUFFIX,fuliti.cc,ChinaProxy
 DOMAIN-SUFFIX,fuliti.com,ChinaProxy
 DOMAIN-SUFFIX,fuliyuwang.com,ChinaProxy
 DOMAIN-SUFFIX,fullzj.com,ChinaProxy
+DOMAIN-SUFFIX,fulu.com,ChinaProxy
 DOMAIN-SUFFIX,fumankong.com,ChinaProxy
 DOMAIN-SUFFIX,fumozhanji.com,ChinaProxy
 DOMAIN-SUFFIX,fumu.com,ChinaProxy
@@ -15782,6 +15788,7 @@ DOMAIN-SUFFIX,gdgudong.com,ChinaProxy
 DOMAIN-SUFFIX,gdhbsh.com,ChinaProxy
 DOMAIN-SUFFIX,gdhouqin.com,ChinaProxy
 DOMAIN-SUFFIX,gdiso.com,ChinaProxy
+DOMAIN-SUFFIX,gdjyw.com,ChinaProxy
 DOMAIN-SUFFIX,gdkang.com,ChinaProxy
 DOMAIN-SUFFIX,gdkjb.com,ChinaProxy
 DOMAIN-SUFFIX,gdmc66.com,ChinaProxy
@@ -15917,6 +15924,7 @@ DOMAIN-SUFFIX,geyanw.com,ChinaProxy
 DOMAIN-SUFFIX,geyo.com,ChinaProxy
 DOMAIN-SUFFIX,gezbox.com,ChinaProxy
 DOMAIN-SUFFIX,gezila.com,ChinaProxy
+DOMAIN-SUFFIX,geziwo.cc,ChinaProxy
 DOMAIN-SUFFIX,funds.com,ChinaProxy
 DOMAIN-SUFFIX,video.com,ChinaProxy
 DOMAIN-SUFFIX,gf.cc,ChinaProxy
@@ -17666,6 +17674,7 @@ DOMAIN-SUFFIX,hiyuezhi.com,ChinaProxy
 DOMAIN-SUFFIX,hiyunchou.com,ChinaProxy
 DOMAIN-SUFFIX,hjapi.com,ChinaProxy
 DOMAIN-SUFFIX,hjav.in,ChinaProxy
+DOMAIN-SUFFIX,hjc.im,ChinaProxy
 DOMAIN-SUFFIX,hjchee.com,ChinaProxy
 DOMAIN-SUFFIX,hjclass.com,ChinaProxy
 DOMAIN-SUFFIX,hjd123.com,ChinaProxy
@@ -17846,6 +17855,7 @@ DOMAIN-SUFFIX,holdhr.com,ChinaProxy
 DOMAIN-SUFFIX,holidays5.com,ChinaProxy
 DOMAIN-SUFFIX,hollischuang.com,ChinaProxy
 DOMAIN-SUFFIX,holyo.org,ChinaProxy
+DOMAIN-SUFFIX,home0311.com,ChinaProxy
 DOMAIN-SUFFIX,home0668.com,ChinaProxy
 DOMAIN-SUFFIX,home5120.com,ChinaProxy
 DOMAIN-SUFFIX,home616.com,ChinaProxy
@@ -18362,6 +18372,7 @@ DOMAIN-SUFFIX,huiyaohuyu.com,ChinaProxy
 DOMAIN-SUFFIX,huiyi8.com,ChinaProxy
 DOMAIN-SUFFIX,huiyiabc.com,ChinaProxy
 DOMAIN-SUFFIX,huizecdn.com,ChinaProxy
+DOMAIN-SUFFIX,inc.com,ChinaProxy
 DOMAIN-SUFFIX,huizhouf.com,ChinaProxy
 DOMAIN-SUFFIX,huizu100.com,ChinaProxy
 DOMAIN-SUFFIX,huizuche.com,ChinaProxy
@@ -19922,6 +19933,7 @@ DOMAIN-SUFFIX,jayfc.com,ChinaProxy
 DOMAIN-SUFFIX,jb1000.com,ChinaProxy
 DOMAIN-SUFFIX,jb51.net,ChinaProxy
 DOMAIN-SUFFIX,jbaobao.com,ChinaProxy
+DOMAIN-SUFFIX,jbbjq.com,ChinaProxy
 DOMAIN-SUFFIX,jbhdq.com,ChinaProxy
 DOMAIN-SUFFIX,jbl100.com,ChinaProxy
 DOMAIN-SUFFIX,jbook.hk,ChinaProxy
@@ -20073,6 +20085,7 @@ DOMAIN-SUFFIX,jgwsoft.com,ChinaProxy
 DOMAIN-SUFFIX,jgzmz.net,ChinaProxy
 DOMAIN-SUFFIX,jgzyw.com,ChinaProxy
 DOMAIN-SUFFIX,jhcb.net,ChinaProxy
+DOMAIN-SUFFIX,jhdxwl.com,ChinaProxy
 DOMAIN-SUFFIX,jhfgtyjh.com,ChinaProxy
 DOMAIN-SUFFIX,jhgy.cc,ChinaProxy
 DOMAIN-SUFFIX,jhhunli.net,ChinaProxy
@@ -20482,6 +20495,7 @@ DOMAIN-SUFFIX,jisuxt.com,ChinaProxy
 DOMAIN-SUFFIX,jisuxz.com,ChinaProxy
 DOMAIN-SUFFIX,jita.im,ChinaProxy
 DOMAIN-SUFFIX,jita5.com,ChinaProxy
+DOMAIN-SUFFIX,jitaqupu.com,ChinaProxy
 DOMAIN-SUFFIX,jitashe.net,ChinaProxy
 DOMAIN-SUFFIX,jitatang.com,ChinaProxy
 DOMAIN-SUFFIX,jitay.com,ChinaProxy
@@ -21314,6 +21328,7 @@ DOMAIN-SUFFIX,kalading.com,ChinaProxy
 DOMAIN-SUFFIX,kalegou.com,ChinaProxy
 DOMAIN-SUFFIX,kaluli.com,ChinaProxy
 DOMAIN-SUFFIX,kameng.com,ChinaProxy
+DOMAIN-SUFFIX,kamenwang.com,ChinaProxy
 DOMAIN-SUFFIX,kamigami.org,ChinaProxy
 DOMAIN-SUFFIX,kamiro.net,ChinaProxy
 DOMAIN-SUFFIX,kan0512.com,ChinaProxy
@@ -21700,6 +21715,7 @@ DOMAIN-SUFFIX,km1818.com,ChinaProxy
 DOMAIN-SUFFIX,km998.com,ChinaProxy
 DOMAIN-SUFFIX,kmail.com,ChinaProxy
 DOMAIN-SUFFIX,kmg898.com,ChinaProxy
+DOMAIN-SUFFIX,kmgck.com,ChinaProxy
 DOMAIN-SUFFIX,kmgtp.org,ChinaProxy
 DOMAIN-SUFFIX,kmguolv.com,ChinaProxy
 DOMAIN-SUFFIX,kmhimafx.com,ChinaProxy
@@ -23507,6 +23523,7 @@ DOMAIN-SUFFIX,blog.com,ChinaProxy
 DOMAIN-SUFFIX,lxway.com,ChinaProxy
 DOMAIN-SUFFIX,lxy.me,ChinaProxy
 DOMAIN-SUFFIX,lxyes.com,ChinaProxy
+DOMAIN-SUFFIX,lxyfh.com,ChinaProxy
 DOMAIN-SUFFIX,ly.com,ChinaProxy
 DOMAIN-SUFFIX,ly521.org,ChinaProxy
 DOMAIN-SUFFIX,ly980.com,ChinaProxy
@@ -24372,6 +24389,7 @@ DOMAIN-SUFFIX,minglian.com,ChinaProxy
 DOMAIN-SUFFIX,minglipei.com,ChinaProxy
 DOMAIN-SUFFIX,mingliu8.com,ChinaProxy
 DOMAIN-SUFFIX,mingluji.com,ChinaProxy
+DOMAIN-SUFFIX,mingren888.com,ChinaProxy
 DOMAIN-SUFFIX,mingrenxiang.com,ChinaProxy
 DOMAIN-SUFFIX,mingrenziliao.com,ChinaProxy
 DOMAIN-SUFFIX,mingshici.com,ChinaProxy
@@ -25820,6 +25838,7 @@ DOMAIN-SUFFIX,octo.fm,ChinaProxy
 DOMAIN-SUFFIX,octocard.in,ChinaProxy
 DOMAIN-SUFFIX,octwuhan.com,ChinaProxy
 DOMAIN-SUFFIX,oculist.net,ChinaProxy
+DOMAIN-SUFFIX,odao.com,ChinaProxy
 DOMAIN-SUFFIX,odict.net,ChinaProxy
 DOMAIN-SUFFIX,odinliu.com,ChinaProxy
 DOMAIN-SUFFIX,odkah.com,ChinaProxy
@@ -26305,6 +26324,7 @@ DOMAIN-SUFFIX,parischerie.com,ChinaProxy
 DOMAIN-SUFFIX,parkmecn.com,ChinaProxy
 DOMAIN-SUFFIX,parnassusdata.com,ChinaProxy
 DOMAIN-SUFFIX,partinchina.com,ChinaProxy
+DOMAIN-SUFFIX,pashiqi.com,ChinaProxy
 DOMAIN-SUFFIX,passby.me,ChinaProxy
 DOMAIN-SUFFIX,passcdn.com,ChinaProxy
 DOMAIN-SUFFIX,passport.lenovo,ChinaProxy
@@ -27777,6 +27797,7 @@ DOMAIN-SUFFIX,queenfather.com,ChinaProxy
 DOMAIN-SUFFIX,queshao.com,ChinaProxy
 DOMAIN-SUFFIX,questyleaudio.com,ChinaProxy
 DOMAIN-SUFFIX,queyang.com,ChinaProxy
+DOMAIN-SUFFIX,qufair.com,ChinaProxy
 DOMAIN-SUFFIX,qufaya.com,ChinaProxy
 DOMAIN-SUFFIX,qufenqi.com,ChinaProxy
 DOMAIN-SUFFIX,qugps.com,ChinaProxy
@@ -30876,6 +30897,7 @@ DOMAIN-SUFFIX,taofang.com,ChinaProxy
 DOMAIN-SUFFIX,taofen8.com,ChinaProxy
 DOMAIN-SUFFIX,taohua.com,ChinaProxy
 DOMAIN-SUFFIX,taohuaan.net,ChinaProxy
+DOMAIN-SUFFIX,taohuichang.com,ChinaProxy
 DOMAIN-SUFFIX,taohuren.com,ChinaProxy
 DOMAIN-SUFFIX,taojin6.com,ChinaProxy
 DOMAIN-SUFFIX,taojindi.com,ChinaProxy
@@ -31619,6 +31641,7 @@ DOMAIN-SUFFIX,toutiao9.com,ChinaProxy
 DOMAIN-SUFFIX,toutiaocdn.net,ChinaProxy
 DOMAIN-SUFFIX,toutiaocloud.com,ChinaProxy
 DOMAIN-SUFFIX,toutiaocloud.net,ChinaProxy
+DOMAIN-SUFFIX,toutiaoimg.com,ChinaProxy
 DOMAIN-SUFFIX,toutiaopage.com,ChinaProxy
 DOMAIN-SUFFIX,toutoufc.com,ChinaProxy
 DOMAIN-SUFFIX,toutoupiao.com,ChinaProxy
@@ -34404,6 +34427,7 @@ DOMAIN-SUFFIX,wyn88.com,ChinaProxy
 DOMAIN-SUFFIX,wyr.me,ChinaProxy
 DOMAIN-SUFFIX,wyrj.com,ChinaProxy
 DOMAIN-SUFFIX,wys.me,ChinaProxy
+DOMAIN-SUFFIX,wysaid.org,ChinaProxy
 DOMAIN-SUFFIX,wysap.com,ChinaProxy
 DOMAIN-SUFFIX,wytz9.com,ChinaProxy
 DOMAIN-SUFFIX,wyunion.com,ChinaProxy
@@ -34573,6 +34597,7 @@ DOMAIN-SUFFIX,xdyqw.com,ChinaProxy
 DOMAIN-SUFFIX,xdytt.com,ChinaProxy
 DOMAIN-SUFFIX,xeeee.net,ChinaProxy
 DOMAIN-SUFFIX,xeenho.com,ChinaProxy
+DOMAIN-SUFFIX,xege.org,ChinaProxy
 DOMAIN-SUFFIX,xemh.com,ChinaProxy
 DOMAIN-SUFFIX,xender.com,ChinaProxy
 DOMAIN-SUFFIX,xenium.mobi,ChinaProxy
@@ -35849,6 +35874,7 @@ DOMAIN-SUFFIX,yanyulin.info,ChinaProxy
 DOMAIN-SUFFIX,yanzaixiu.com,ChinaProxy
 DOMAIN-SUFFIX,yanzhouren.org,ChinaProxy
 DOMAIN-SUFFIX,yanzihc.com,ChinaProxy
+DOMAIN-SUFFIX,yanzoujia.net,ChinaProxy
 DOMAIN-SUFFIX,yao123456.com,ChinaProxy
 DOMAIN-SUFFIX,yaocai666.com,ChinaProxy
 DOMAIN-SUFFIX,yaochufa.com,ChinaProxy
@@ -36264,6 +36290,7 @@ DOMAIN-SUFFIX,yinyuege.com,ChinaProxy
 DOMAIN-SUFFIX,yinyuegf.com,ChinaProxy
 DOMAIN-SUFFIX,yinyuetai.com,ChinaProxy
 DOMAIN-SUFFIX,yinyueyouxi.com,ChinaProxy
+DOMAIN-SUFFIX,yinyuezj.com,ChinaProxy
 DOMAIN-SUFFIX,yinzifang.com,ChinaProxy
 DOMAIN-SUFFIX,yinziji.com,ChinaProxy
 DOMAIN-SUFFIX,yinzuojianshen.com,ChinaProxy
@@ -36285,6 +36312,7 @@ DOMAIN-SUFFIX,yiqifin.com,ChinaProxy
 DOMAIN-SUFFIX,yiqihao.com,ChinaProxy
 DOMAIN-SUFFIX,yiqijixiang.com,ChinaProxy
 DOMAIN-SUFFIX,yiqinyuanresort.com,ChinaProxy
+DOMAIN-SUFFIX,yiqiso.com,ChinaProxy
 DOMAIN-SUFFIX,yiqisoo.com,ChinaProxy
 DOMAIN-SUFFIX,yiqisooimg.com,ChinaProxy
 DOMAIN-SUFFIX,yiqisou.net,ChinaProxy
@@ -36770,6 +36798,7 @@ DOMAIN-SUFFIX,ypzdw.com,ChinaProxy
 DOMAIN-SUFFIX,yq027.com,ChinaProxy
 DOMAIN-SUFFIX,yq169.net,ChinaProxy
 DOMAIN-SUFFIX,yqb.com,ChinaProxy
+DOMAIN-SUFFIX,yqbimg.net,ChinaProxy
 DOMAIN-SUFFIX,yqcz.la,ChinaProxy
 DOMAIN-SUFFIX,yqdown.com,ChinaProxy
 DOMAIN-SUFFIX,yqdown.net,ChinaProxy
@@ -37292,6 +37321,7 @@ DOMAIN-SUFFIX,yzw.cc,ChinaProxy
 DOMAIN-SUFFIX,yzwb.com,ChinaProxy
 DOMAIN-SUFFIX,yzwb.net,ChinaProxy
 DOMAIN-SUFFIX,yzxlr.com,ChinaProxy
+DOMAIN-SUFFIX,yzyczp.com,ChinaProxy
 DOMAIN-SUFFIX,yzzaoxing.com,ChinaProxy
 DOMAIN-SUFFIX,yzzs.cc,ChinaProxy
 DOMAIN-SUFFIX,yzzzn.com,ChinaProxy
@@ -37973,6 +38003,7 @@ DOMAIN-SUFFIX,zhouhua.net,ChinaProxy
 DOMAIN-SUFFIX,zhoujilianhe.com,ChinaProxy
 DOMAIN-SUFFIX,zhoujiping.com,ChinaProxy
 DOMAIN-SUFFIX,zhoukan.cc,ChinaProxy
+DOMAIN-SUFFIX,pr.com,ChinaProxy
 DOMAIN-SUFFIX,zhoupuwang.com,ChinaProxy
 DOMAIN-SUFFIX,zhouwa.net,ChinaProxy
 DOMAIN-SUFFIX,zhouwenbin.com,ChinaProxy
