--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -36,14 +36,14 @@ DOMAIN, apps.mzstatic.com ,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-08-02 00:48:11
+// updated on 2017-08-07 00:38:06
 
 
 
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-08-02 00:48:04
+// updated on 2017-08-07 00:38:02
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -55,6 +55,7 @@ DOMAIN-SUFFIX,alien-ufos.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,altrec.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,arena.taipei,Proxy,force-remote-dns
 DOMAIN-SUFFIX,asianspiss.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,assimp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,athenaeizou.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,azubu.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,banorte.com,Proxy,force-remote-dns
@@ -70,6 +71,7 @@ DOMAIN-SUFFIX,static.comico.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,crossfire.co.kr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,d2pass.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,darpa.mil,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dawangidc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deezer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,desipro.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dish.com,Proxy,force-remote-dns
@@ -209,6 +211,7 @@ DOMAIN-SUFFIX,ssl.webpack.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wheretowatch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wingamestore.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wizcrafts.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vod.wwe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,xfinity.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ytn.co.kr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zattoo.com,Proxy,force-remote-dns
@@ -447,6 +450,7 @@ DOMAIN-SUFFIX,chromium.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,com.google,Proxy,force-remote-dns
 DOMAIN-SUFFIX,creativelab5.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,data-vocabulary.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,debug.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deepmind.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deja.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,design.google,Proxy,force-remote-dns
@@ -608,7 +612,10 @@ DOMAIN-SUFFIX,1688.com.au,Proxy,force-remote-dns
 DOMAIN-SUFFIX,173ng.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,177pic.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,17t17p.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,18board.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,18board.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,18onlygirls.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,18p2p.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,18virginsex.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,1949er.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zhao.1984.city,Proxy,force-remote-dns
@@ -1346,6 +1353,7 @@ DOMAIN-SUFFIX,crocotube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,crossthewall.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,csdparty.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,csuchen.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,csw.org.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ctao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ctfriend.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ctitv.com.tw,Proxy,force-remote-dns
@@ -1588,6 +1596,7 @@ DOMAIN-SUFFIX,enanyang.my,Proxy,force-remote-dns
 DOMAIN-SUFFIX,enewstree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,enfal.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chinese.engadget.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,engagedaily.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,englishforeveryone.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,englishfromengland.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,englishpen.org,Proxy,force-remote-dns
@@ -1801,11 +1810,10 @@ DOMAIN-SUFFIX,franklc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freakshare.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,free4u.com.ar,Proxy,force-remote-dns
 DOMAIN-SUFFIX,free-gate.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,free-hada-now.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,free-proxy.cz,Proxy,force-remote-dns
 DOMAIN-SUFFIX,free.fr,Proxy,force-remote-dns
-DOMAIN-SUFFIX,allonlinux.free.fr,Proxy,force-remote-dns
-DOMAIN-SUFFIX,dimitrik.free.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kineox.free.fr,Proxy,force-remote-dns
-DOMAIN-SUFFIX,puttycm.free.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freealim.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,whitebear.freebearblog.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freebrowser.org,Proxy,force-remote-dns
@@ -1816,7 +1824,6 @@ DOMAIN-SUFFIX,freedomsherald.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freefq.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freefuckvids.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freegao.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,free-hada-now.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freeilhamtohti.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,freekwonpyong.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,saveliuxiaobo.com,Proxy,force-remote-dns
@@ -2345,6 +2352,7 @@ DOMAIN-SUFFIX,igvita.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ihakka.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ihao.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iicns.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ikstar.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,illusionfactory.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ilove80.be,Proxy,force-remote-dns
 DOMAIN-SUFFIX,im.tv,Proxy,force-remote-dns
@@ -2405,6 +2413,7 @@ DOMAIN-SUFFIX,iportal.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ippotv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ipredator.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iptv.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,iptvbin.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ipvanish.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,iredmail.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,chinese.irib.ir,Proxy,force-remote-dns
@@ -4203,6 +4212,7 @@ DOMAIN-SUFFIX,tw-npo.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twaitter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twapperkeeper.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twaud.io,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twavi.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twbbs.net.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twbbs.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twbbs.tw,Proxy,force-remote-dns
@@ -4212,6 +4222,7 @@ DOMAIN-SUFFIX,tweepml.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetbackup.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetboard.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetboner.biz,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tweetcs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetdeck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deck.ly,Proxy,force-remote-dns
 DOMAIN-SUFFIX,mtw.tl,Proxy,force-remote-dns
