--- a/configFileHere/gfwlist.conf
+++ b/configFileHere/gfwlist.conf
@@ -36,14 +36,14 @@ DOMAIN, apps.mzstatic.com ,Proxy,force-remote-dns
 
 // AD Block
 // thx  https://github.com/lhie1/Surge 
-// updated on 2017-08-07 00:38:06
+// updated on 2017-08-17 23:08:33
 
 
 
 
 // proxy list from gfwlist!
 // SS config file for surge with gfw list 
-// updated on 2017-08-07 00:38:02
+// updated on 2017-08-17 23:08:32
 
 DOMAIN-SUFFIX,2dbook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,4tern.com,Proxy,force-remote-dns
@@ -61,6 +61,7 @@ DOMAIN-SUFFIX,azubu.tv,Proxy,force-remote-dns
 DOMAIN-SUFFIX,banorte.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bash-hackers.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,beeg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,global.bing.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bloombergview.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,boysmaster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,carfax.com,Proxy,force-remote-dns
@@ -74,6 +75,7 @@ DOMAIN-SUFFIX,darpa.mil,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dawangidc.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,deezer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,desipro.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dingchin.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dish.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,img.dlsite.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dm530.net,Proxy,force-remote-dns
@@ -96,6 +98,7 @@ DOMAIN-SUFFIX,g-area.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gettyimages.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getuploader.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,github.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,raw.githubusercontent.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,glass8.eu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,glype.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,go141.com,Proxy,force-remote-dns
@@ -1079,6 +1082,7 @@ DOMAIN-SUFFIX,buugaa.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,buzzhand.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,buzzhand.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,buzzorange.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,bvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bwsj.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,bx.tl,Proxy,force-remote-dns
 DOMAIN-SUFFIX,c-spanvideo.org,Proxy,force-remote-dns
@@ -1491,6 +1495,7 @@ DOMAIN-SUFFIX,dontmovetochina.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dorjeshugden.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dotplane.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dotsub.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,dotvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,doub.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,dougscripts.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,douhokanko.net,Proxy,force-remote-dns
@@ -1764,6 +1769,7 @@ DOMAIN-SUFFIX,findmespot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,findyoutube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fingerdaily.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,finler.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,firearmsworld.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,fireofliberty.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,firetweet.io,Proxy,force-remote-dns
 DOMAIN-SUFFIX,flagsonline.it,Proxy,force-remote-dns
@@ -1944,6 +1950,7 @@ DOMAIN-SUFFIX,geocities.jp,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geohot.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,geometrictools.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gerefoundation.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,getastrill.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getchu.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getcloak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getfoxyproxy.org,Proxy,force-remote-dns
@@ -1954,6 +1961,7 @@ DOMAIN-SUFFIX,getlantern.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getjetso.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getiton.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,getsocialscope.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,getsync.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gfbv.de,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gfgold.com.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gfsale.com,Proxy,force-remote-dns
@@ -2610,9 +2618,11 @@ DOMAIN-SUFFIX,kurtmunger.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kusocity.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kwcg.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kwongwah.com.my,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kxsw.life,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kyofun.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kyohk.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kyoyue.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kyzyhello.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,kzeng.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,la-forum.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ladbrokes.com,Proxy,force-remote-dns
@@ -2680,6 +2690,7 @@ DOMAIN-SUFFIX,linux.org.hk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,linuxtoy.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lionsroar.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lipuman.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,liquidvpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,greatfire.us7.list-manage.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,listentoyoutube.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,listorious.com,Proxy,force-remote-dns
@@ -2975,6 +2986,7 @@ DOMAIN-SUFFIX,nakido.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,naol.ca,Proxy,force-remote-dns
 DOMAIN-SUFFIX,naol.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,uighur.narod.ru,Proxy,force-remote-dns
+DOMAIN-SUFFIX,nat.moe,Proxy,force-remote-dns
 DOMAIN-SUFFIX,cyberghost.natado.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,national-lottery.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,news.nationalgeographic.com,Proxy,force-remote-dns
@@ -3001,6 +3013,7 @@ DOMAIN-SUFFIX,netme.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,netsneak.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,network54.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,networkedblogs.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,networktunnel.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,neverforget8964.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,new-3lunch.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,new-akiba.com,Proxy,force-remote-dns
@@ -3131,6 +3144,7 @@ DOMAIN-SUFFIX,www2.ohchr.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oikos.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oiktv.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,oizoblog.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,ok.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,okayfreedom.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,okk.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,filmy.olabloga.pl,Proxy,force-remote-dns
@@ -3214,6 +3228,7 @@ DOMAIN-SUFFIX,paljorpublications.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,paltalk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pangci.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,panacom.co.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pandapow.co,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pandapow.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pandavpn-jp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,panluan.net,Proxy,force-remote-dns
@@ -3284,7 +3299,16 @@ DOMAIN-SUFFIX,ping.fm,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pinimg.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pinkrod.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pinoy-n.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.at,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.co.kr,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.co.uk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,pinterest.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.de,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.dk,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.fr,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.jp,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.nl,Proxy,force-remote-dns
+DOMAIN-SUFFIX,pinterest.se,Proxy,force-remote-dns
 DOMAIN-SUFFIX,piposay.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,piraattilahti.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,piring.com,Proxy,force-remote-dns
@@ -3430,6 +3454,7 @@ DOMAIN-SUFFIX,qstatus.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,qtweeter.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,qtrac.eu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,quannengshen.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,quantumbooter.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,quitccp.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,quitccp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,quran.com,Proxy,force-remote-dns
@@ -3476,6 +3501,7 @@ DOMAIN-SUFFIX,recordhistory.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,recovery.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,online.recoveryversion.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,recoveryversion.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,red-lang.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redchinacn.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redchinacn.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,redtube.com,Proxy,force-remote-dns
@@ -3489,6 +3515,7 @@ DOMAIN-SUFFIX,renminbao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,renyurenquan.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,certificate.revocationcheck.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,subacme.rerouted.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,resilio.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,reuters.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,reutersmedia.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,revleft.com,Proxy,force-remote-dns
@@ -4012,6 +4039,7 @@ DOMAIN-SUFFIX,tibet.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet.nu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tibet.sk,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet.org.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet.to,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibet-envoy.eu,Proxy,force-remote-dns
@@ -4083,6 +4111,7 @@ DOMAIN-SUFFIX,tibettelegraph.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibettimes.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tibetwrites.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ticket.com.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tigervpn.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,timdir.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,time.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,timsah.com,Proxy,force-remote-dns
@@ -4175,6 +4204,7 @@ DOMAIN-SUFFIX,tumutanzi.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tumview.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tunein.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tunnelbear.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,tunnelr.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.blue,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.cc,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tuo8.club,Proxy,force-remote-dns
@@ -4234,6 +4264,7 @@ DOMAIN-SUFFIX,tweetree.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweettunnel.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetwally.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tweetymail.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twelve.today,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twftp.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twibase.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,twibble.de,Proxy,force-remote-dns
@@ -4337,6 +4368,7 @@ DOMAIN-SUFFIX,ultravpn.fr,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ultraxs.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,umich.edu,Proxy,force-remote-dns
 DOMAIN-SUFFIX,unblock.cn.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,unblocker.yt,Proxy,force-remote-dns
 DOMAIN-SUFFIX,unblock-us.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,unblockdmm.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,unblocksit.es,Proxy,force-remote-dns
@@ -4462,6 +4494,7 @@ DOMAIN-SUFFIX,vot.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vovo2000.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,voxer.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,voy.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vpn.ac,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpn4all.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnaccount.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnaccounts.com,Proxy,force-remote-dns
@@ -4482,6 +4515,7 @@ DOMAIN-SUFFIX,vpnmaster.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpninja.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnintouch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnintouch.net,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vpnjack.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnpick.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnpop.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnpronet.com,Proxy,force-remote-dns
@@ -4489,6 +4523,7 @@ DOMAIN-SUFFIX,vpnreactor.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnreviewz.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnsecure.me,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnshazam.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,vpnshieldapp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpnsp.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpntraffic.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vpntunnel.com,Proxy,force-remote-dns
@@ -4500,7 +4535,6 @@ DOMAIN-SUFFIX,vpser.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vraiesagesse.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vtunnel.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vuku.cc,Proxy,force-remote-dns
-DOMAIN-SUFFIX,w.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,lists.w3.org,Proxy,force-remote-dns
 DOMAIN-SUFFIX,waffle1999.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wahas.com,Proxy,force-remote-dns
@@ -4613,6 +4647,7 @@ DOMAIN-SUFFIX,sports.williamhill.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,vegas.williamhill.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,willw.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,windowsphoneme.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,windscribe.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,winning11.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,winwhispers.info,Proxy,force-remote-dns
 DOMAIN-SUFFIX,wiredbytes.com,Proxy,force-remote-dns
@@ -4832,12 +4867,13 @@ DOMAIN-SUFFIX,yzzk.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zacebook.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zalmos.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zannel.com,Proxy,force-remote-dns
-DOMAIN-SUFFIX,zaobao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zaobao.com.sg,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zaozon.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zdnet.com.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zello.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zengjinyan.org,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zenmate.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zenmate.com.ru,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zeutch.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zfreet.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zgsddh.com,Proxy,force-remote-dns
@@ -4877,6 +4913,7 @@ DOMAIN-SUFFIX,zonghexinwen.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zootool.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zoozle.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,writer.zoho.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,zpn.im,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zshare.net,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zsrhao.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,zuo.la,Proxy,force-remote-dns
@@ -4890,6 +4927,7 @@ DOMAIN-SUFFIX,phobos.apple.com,Proxy,force-remote-dns
 DOMAIN-SUFFIX,gov.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,tacc.cwb.gov.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,immigration.gov.tw,Proxy,force-remote-dns
+DOMAIN-SUFFIX,mjib.gov.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,nsc.gov.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ntbna.gov.tw,Proxy,force-remote-dns
 DOMAIN-SUFFIX,ntsna.gov.tw,Proxy,force-remote-dns
